--- a/03-nginx.yaml
+++ b/03-nginx.yaml
@@ -1,5 +1,6 @@
 - name: install nginx and run
   hosts: web
+  become: yes #take sudo access
   tasks: 
   - name: install nginx
     ansible.builtin.package:
