--- a/03-nginx.yaml
+++ b/03-nginx.yaml
@@ -3,7 +3,7 @@
   become: yes #take sudo access
   tasks: 
   - name: install nginx
-    ansible.builtin.package:
+    ansible.builtin.dnf:
       name: nginx
       state: present
 
