--- a/06-vars-files.yaml
+++ b/06-vars-files.yaml
@@ -1,8 +1,12 @@
 - name: variables from files
   hosts: web
   vars_files:
-  - vars.yaml
+    - vars.yaml
   tasks:
-  - name: print the course information
-    ansible.builtin.debug:
-      msg: "Hi, I am learning {{COURSE}}, Duration is: {{DURATION}}, Trainer: {{TRAINER}}"
+    - name: print the course information
+      ansible.builtin.debug:
+        msg: "Hi, I am learning {{COURSE}}, Duration is: {{DURATION}}, Trainer: {{TRAINER}}"
+
+    - name: print the output
+      ansible.builtin.debug:
+        msg: "{{ ec2_instances }}"
