--- a/21-ec2create-r53.yaml
+++ b/21-ec2create-r53.yaml
@@ -11,6 +11,8 @@
       - mysql
       - backend
       - frontend
+    zone: daws81s.online
+
   tasks:
     - name: create ec2 instance
       amazon.aws.ec2_instance:
@@ -21,3 +23,33 @@
         image_id: "{{ ami_id }}"
       loop: "{{ instances }}"
       register: ec2_instances
+
+    - name: print the output
+      ansible.builtin.debug:
+        msg: "{{ ec2_instances }}"
+
+    #private IP R53
+    - name: create r53 private records
+      amazon.aws.route53:
+        state: present
+        zone: "{{ zone }}"
+        record: "{{ item.item }}.{{ zone }}" #mysql.daws81s.online
+        type: A
+        ttl: 1
+        value: "{{ item.instances[0].private_ip_address }}"
+        wait: true
+        overwrite: true
+      loop: "{{ ec2_instances.results }}"
+
+    - name: create r53 public record for frontend
+      amazon.aws.route53:
+        state: present
+        zone: "{{ zone }}"
+        record: "{{ zone }}" #daws81s.online
+        type: A
+        ttl: 1
+        value: "{{ item.instances[0].public_ip_address }}"
+        wait: true
+        overwrite: true
+      loop: "{{ ec2_instances.results }}"
+      when: item.item == "frontend" #when keyword should not have {{}}
