--- a/21-ec2create-r53.yaml
+++ b/21-ec2create-r53.yaml
@@ -11,7 +11,7 @@
       - mysql
       - backend
       - frontend
-    zone: daws81s.online
+    zone: nandadaws81s.online
 
   tasks:
     - name: create ec2 instance
@@ -33,7 +33,7 @@
       amazon.aws.route53:
         state: present
         zone: "{{ zone }}"
-        record: "{{ item.item }}.{{ zone }}" #mysql.daws81s.online
+        record: "{{ item.item }}.{{ zone }}" #mysql.nandadaws81s.online
         type: A
         ttl: 1
         value: "{{ item.instances[0].private_ip_address }}"
